--- a/Workflow.bib
+++ b/Workflow.bib
@@ -1561,3 +1561,20 @@ keywords = {variance estimation, spectral analysis, simulation, confidence inter
   langid = {english},
   file = {/home/alan/Zotero/storage/FUMMVMLI/Lloyd-Smith - 2007 - Maximum Likelihood Estimation of the Negative Bino.pdf}
 }
+@article{Zappia2017,
+  title = {Splatter: Simulation of Single-Cell {{RNA}} Sequencing Data},
+  shorttitle = {Splatter},
+  author = {Zappia, Luke and Phipson, Belinda and Oshlack, Alicia},
+  year = {2017},
+  month = dec,
+  journal = {Genome Biology},
+  volume = {18},
+  number = {1},
+  pages = {174},
+  issn = {1474-760X},
+  doi = {10.1186/s13059-017-1305-0},
+  urldate = {2020-02-07},
+  abstract = {As single-cell RNA sequencing (scRNA-seq) technologies have rapidly developed, so have analysis methods. Many methods have been tested, developed, and validated using simulated datasets. Unfortunately, current simulations are often poorly documented, their similarity to real data is not demonstrated, or reproducible code is not available. Here, we present the Splatter Bioconductor package for simple, reproducible, and well-documented simulation of scRNA-seq data. Splatter provides an interface to multiple simulation methods including Splat, our own simulation, based on a gamma-Poisson distribution. Splat can simulate single populations of cells, populations with multiple cell types, or differentiation paths.},
+  langid = {english},
+  file = {/home/alan/Zotero/storage/YLXBGQVH/Zappia et al. - 2017 - Splatter simulation of single-cell RNA sequencing.pdf}
+}
